--- a/mern-openlayers/client/src/index.css
+++ b/mern-openlayers/client/src/index.css
@@ -11,3 +11,28 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+nav {
+  margin-bottom: 13px;
+  margin-top: 15px;
+  margin-left: 5px;
+}
+
+nav a {
+  color: #333;
+  text-decoration: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+nav a.active {
+  background-color: #ff5e5e;
+  color: white;
+  font-weight: bold;
+}
+
+nav a:hover {
+  background-color: #f0f0f0;
+}
+
+
